# actix-web-learn

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/common/upload/: mod.rs
src/api/test/auth/: mod.rs
src/api/test/index/: mod.rs
src/db/: mod.rs
src/db/mysql/: mod.rs
src/db/redis/: mod.rs
src/model/: mod.rs
src/model/index/: mod.rs
src/model/song/: mod.rs
src/router/: mod.rs  router.rs
src/router/common/upload/: mod.rs
src/router/test/: mod.rs
src/service/common/upload/: mod.rs
src/utils/: auth_middleware.rs  jwt_util.rs  log_middleware.rs  mod.rs  response_result.rs
