[package]
name = "actix-web_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
redis = "0.25.3"
actix-web = "4.5.1"
actix-http = "3.6.0"
actix-multipart = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
jsonwebtoken = "9.3.0"
chrono = {version = "0.4.37",features = ["serde"]}
futures-util = "0.3.30"
once_cell = "1.19.0"
env_logger = "0.11.3"
log = "0.4.21"